# HotFlow

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
hotflow/: __init__.py  cli.py  config.py  copymaker.py  db.py  models.py  pipeline.py  prompts.py  taobao.py
tests/: test_config.py  test_prompts.py  test_taobao.py
